# hiker

./: .cursorignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  install  install.ps1
.github/workflows/: ci.yml  release.yml
.hiker/: temporal.tent
crates/hiker/: Cargo.toml
crates/hiker/src/: ast.rs  checker.rs  eval.rs  facts.rs  lexer.rs  lib.rs  main.rs  parser.rs  verify.rs
crates/hiker/src/backends/: python.rs  rust.rs  typescript.rs
crates/rascador/: Cargo.toml
crates/rascador/src/: ast.rs  checker.rs  lexer.rs  lib.rs  main.rs  parser.rs
crates/rascador/src/backends/: mod.rs  python.rs  rust.rs  typescript.rs
docs/: RELEASING.md
examples/: architecture.facts.json  architecture.tent
examples/extractors/: deps-to-facts.mjs  grep-to-facts.sh
examples/temporal/: Cargo.toml
examples/temporal-py/: Makefile  conftest.py  requirements.txt  temporal.py
examples/temporal-ts/: package-lock.json  package.json  vitest.config.ts
examples/temporal-ts/src/: temporal.ts
examples/temporal-ts/tests/: hiker.test.ts  rascador.test.ts
examples/temporal/src/: lib.rs
examples/temporal/tests/: hiker_generated.rs  rascador_generated.rs
scripts/: release-version.sh
skills/hiker/: SKILL.md
skills/hiker/reference/: create.md  gen.md  grammar.md  verify.md
skills/rascador/: SKILL.md
skills/rascador/reference/: create.md  gen.md  grammar.md
