[package]
name = "hiker"
version = "0.1.0"
edition = "2021"
description = "A tiny DSL for stating architectural intent that compiles, with a Rust proptest bridge."

[[bin]]
name = "hiker"
path = "src/main.rs"

[lib]
name = "hiker"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
